Mejoras en exclusión por IP y verificación de Turnstile

--- a/public/index.html
+++ b/public/index.html
@@ -3,71 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con Turnstile</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f9;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        form {
-            max-width: 500px;
-            margin: 0 auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        label {
-            display: block;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-        input, textarea, button {
-            width: 100%;
-            margin-top: 5px;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .cf-turnstile {
-            margin-top: 15px;
-        }
-    </style>
+    <title>Formulario de Contacto</title>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
     <h1>Formulario de Contacto</h1>
-    <form id="contact-form" action="/submit" method="POST">
+    <form action="/submit" method="POST">
         <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required><br>
 
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
 
         <label for="message">Mensaje:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+        <textarea id="message" name="message" required></textarea><br>
 
-        <!-- Turnstile de Cloudflare -->
-        <div class="cf-turnstile" data-sitekey="0x4AAAAAAA4HSRxZqvqNfyqW"></div>
+        <!-- Agregar el widget Turnstile -->
+        <div class="cf-turnstile" data-sitekey="tu-clave-publica-de-turnstile"></div><br>
 
         <button type="submit">Enviar</button>
     </form>
-
-    <!-- Script de Turnstile -->
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
 </html>
