Fix: Convert server.js to ES Module or fix CommonJS compatibility

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Contacto</title>
+    <!-- Asegúrate de que esta ruta sea la correcta -->
+    <link rel="stylesheet" href="/estilo.css">
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
