--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Contacto</title>
     <!-- Asegúrate de que esta ruta sea la correcta -->
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
