Fix: Convert server.js to ES Module or fix CommonJS compatibility

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,11 @@
     <h1>Formulario de Contacto</h1>
 
     <!-- Mostrar mensaje si la IP está excluida -->
-    <div id="ipMessage" style="color: green; text-align: center; font-weight: bold; margin-bottom: 20px;">
-        <!-- Este mensaje solo se mostrará si la IP está excluida -->
+    <div id="ipMessage" style="color: green; text-align: center; font-weight: bold; margin-bottom: 20px; display: none;">
         IP excluida, el CAPTCHA ha sido omitido.
     </div>
 
-    <form action="/submit" method="POST">
+    <form id="contactForm" action="/submit" method="POST">
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name" required><br>
 
@@ -33,14 +32,19 @@
     </form>
 
     <script>
-        // Comprobar si la IP está excluida y mostrar el mensaje
-        const isIPExcluded = false;  // Cambia esto según la lógica del backend
-        if (isIPExcluded) {
-            document.getElementById('ipMessage').style.display = 'block';
-            document.querySelector('.cf-turnstile').style.display = 'none';  // Ocultar el widget
-        } else {
-            document.querySelector('.cf-turnstile').style.display = 'block';  // Mostrar el widget de Turnstile
-        }
+        // Realizar una solicitud para verificar si la IP está excluida
+        fetch('/submit', { method: 'POST', body: new URLSearchParams(new FormData(document.getElementById('contactForm'))) })
+            .then(response => response.json())
+            .then(data => {
+                // Mostrar el mensaje si la IP está excluida
+                if (data.isIPExcluded) {
+                    document.getElementById('ipMessage').style.display = 'block';  // Mostrar el mensaje
+                    document.querySelector('.cf-turnstile').style.display = 'none';  // Ocultar el widget de Turnstile
+                } else {
+                    document.querySelector('.cf-turnstile').style.display = 'block';  // Mostrar el widget de Turnstile
+                }
+            })
+            .catch(error => console.error('Error al verificar la IP:', error));
     </script>
 </body>
 </html>
